[package]
name = "glium_text"
version = "0.14.0"
authors = ["Pierre Krieger <pierre.krieger1708@gmail.com>"]
description = "Text drawing with glium and freetype"
documentation = "https://docs.rs/glium_text"
repository = "https://github.com/tomaka/glium_text"
keywords = ["text", "opengl"]
license = "MIT"

[dependencies]
freetype-sys = "0.23.0"
libc = "0.2.65"
glium = { version = "0.36.0", features = ["glutin"] }

[dev-dependencies]
cgmath = "0.18"
